@@ -1,7 +1,9 @@
-from batou.component import Component
+import batou.component
+import batou.lib.cron
+import os.path
 
 
-class Service(Component):
+class Service(batou.component.Component):
     """A generic component to provide a system service.
 
     Platform-specific components need to perform the work necessary
@@ -11,3 +13,15 @@ class Service(Component):
     namevar = 'executable'
 
     pidfile = None  # The pidfile as written by the services' executable.
+
+
+@batou.component.platform('vagrant', Service)
+class UserInit(batou.component.Component):
+    """Register a service with user-init."""
+
+    def configure(self):
+        executable = os.path.join(
+            self.parent.workdir, self.parent.executable)
+        self += batou.lib.cron.CronJob(
+            executable,
+            timing='@reboot')
